<resources>
    <string name="app_name">NASA Image Of The Day</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_date">Pick a date</string>
    <string name="get_image">get NASA image</string>
    <string name="main_description">Pick a date and get an image of the day from NASA</string>
    <string name="url">url:</string>
    <string name="date">date:</string>
    <string name="image_url">image url:</string>
    <string name="description">"description: "</string>
    <string name="name">Enter name:</string>
    <string name="enter_password">Enter password:</string>
    <string name="enter_name">Enter name:</string>
    <string name="login_button">login</string>
    <string name="add_to_favorites">add to favorites</string>
    <string name="show_favorites">show favorites</string>
    <string name="remove_from_favorites">remove from favorites</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="go_to_favorites">Favorites</string>
    <string name="login">Login</string>
    <string name="dialog_message">You can pick a date and get the image of the day from NASA.\nYou can save the image by clicking SAVE.\nYou can look at your saved images by going to FAVORITES.</string>
    <string name="dialog_title">Instructions</string>
    <string name="help">Help</string>
</resources>